Pequena refatoração no código