@@ -1,112 +1,75 @@
 package com.breaking.ct.models;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Set;
-
-import javax.persistence.Id;
-
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.data.mongodb.core.mapping.Document;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
+import javax.persistence.Id;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
 @Document
+@NoArgsConstructor
+@Getter
+@Setter
 public class Admin implements UserDetails {
 
-	private static final long serialVersionUID = 1L;
-	
-	// ATRIBUTOS
-	private String nome;
-	private String instituicao;
 	@Id
 	private String login;
 	private String email;
 	private String senha;
+	private String nome;
+	private String instituicao;
 	private boolean deleted = false;
-	
-	// CONSTRUCTORES
-	public Admin() {
-		
-	}
-	
-	// GETTERS E SETTERS
-	public String getNome() {
-		return nome;
-	}
-	public void setNome(String nome) {
-		this.nome = nome;
-	}
-	
-	public String getInstituicao() {
-		return instituicao;
-	}
-	public void setInstituicao(String instituicao) {
-		this.instituicao = instituicao;
-	}
-	
-	public String getLogin() {
-		return login;
-	}
-	public void setLogin(String login) {
-		this.login = login;
-	}
-	
-	public String getEmail() {
-		return email;
-	}
-	public void setEmail(String email) {
-		this.email = email;
-	}
-	
-	public String getSenha() {
-		return senha;
-	}
+
 	public void setSenha(String senha) {
 		this.senha = new BCryptPasswordEncoder().encode(senha);
 	}
-	
-	public boolean getDeleted() {
-		return deleted;
-	}
-	public void setDeleted(boolean deleted) {
-		this.deleted = deleted;
-	}
 
-	// SEGURANCA
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		Set<GrantedAuthority> authorities = new HashSet<>();
-		for(String role: Arrays.asList("ALUNO", "EMPRESA", "ADMIN")) {
+		for (String role : List.of("ALUNO", "EMPRESA", "ADMIN")) {
 			authorities.add(new SimpleGrantedAuthority(role));
 		}
 		return authorities;
 	}
+
 	@Override
 	public String getPassword() {
 		return this.senha;
 	}
+
 	@Override
 	public String getUsername() {
 		return this.login;
 	}
+
 	@Override
 	public boolean isAccountNonExpired() {
 		return true;
 	}
+
 	@Override
 	public boolean isAccountNonLocked() {
 		return true;
 	}
+
 	@Override
 	public boolean isCredentialsNonExpired() {
 		return true;
 	}
+
 	@Override
 	public boolean isEnabled() {
 		return true;
 	}
-	
+
 }
